# OpenGL_BaseRepo

./: CMakeLists.txt
.cache/clangd/index/: glad.c.903ED85DFC39432C.idx  glad.c.D0A26351E9D0E1CD.idx  glad.h.9E72207DD83F4515.idx  glad.h.FC1E15669EE0AEBF.idx  khrplatform.h.BFC5366540B73022.idx  khrplatform.h.C5B7A5CD29592BEF.idx  main.cpp.67296779DDCF7AE1.idx  main.cpp.7D6B41F1218702D0.idx
include/glad/: glad.h
src/: glad.c  main.cpp
